--- a/web_backend/src/web_backend.Blazor.Client/MainLayout.razor
+++ b/web_backend/src/web_backend.Blazor.Client/MainLayout.razor
@@ -95,13 +95,23 @@
                         </a>
                         <ul class="vss-dropdown dropdown-menu" aria-labelledby="adminDropdown">
                             <li class="vss-dropdown__item">
+                                <a class="vss-dropdown__link dropdown-item" href="/admin/game-schedule">
+                                    <i class="bi bi-calendar-week me-2"></i>Game Schedule Management
+                                </a>
+                            </li>
+                            <li class="vss-dropdown__item">
                                 <a class="vss-dropdown__link dropdown-item" href="admin/create-livestream">
-                                    Create Livestream
+                                    <i class="bi bi-broadcast me-2"></i>Create Livestream
                                 </a>
                             </li>
                             <li class="vss-dropdown__item">
                                 <a class="vss-dropdown__link dropdown-item" href="/admin/manage-livestreams">
-                                    Manage Livestreams
+                                    <i class="bi bi-list-check me-2"></i>Manage Livestreams
+                                </a>
+                            </li>
+                            <li class="vss-dropdown__item">
+                                <a class="vss-dropdown__link dropdown-item" href="/admin/scoreboards">
+                                    <i class="bi bi-display me-2"></i>Scoreboards
                                 </a>
                             </li>
                         </ul>
