--- a/web_backend/src/web_backend.Blazor.Client/MainLayout.razor
+++ b/web_backend/src/web_backend.Blazor.Client/MainLayout.razor
@@ -80,6 +80,12 @@
                     </a>
                 </li>
                 <li class="vss-nav__item nav-item">
+                    <a class="vss-nav__link nav-link" href="/games">
+                        Games
+                        <svg><rect x="0" y="0" width="100%" height="100%"></rect></svg>
+                    </a>
+                </li>
+                <li class="vss-nav__item nav-item">
                     <a class="vss-nav__link nav-link" href="/contact">
                         Contact Us
                         <svg><rect x="0" y="0" width="100%" height="100%"></rect></svg>
@@ -110,8 +116,18 @@
                                 </a>
                             </li>
                             <li class="vss-dropdown__item">
+                                <a class="vss-dropdown__link dropdown-item" href="/admin/games/create">
+                                    <i class="bi bi-film me-2"></i>Upload Game
+                                </a>
+                            </li>
+                            <li class="vss-dropdown__item">
                                 <a class="vss-dropdown__link dropdown-item" href="/admin/scoreboards">
                                     <i class="bi bi-display me-2"></i>Scoreboards
+                                </a>
+                            </li>
+                            <li class="vss-dropdown__item">
+                                <a class="vss-dropdown__link dropdown-item" href="/admin/manage-scoreboard">
+                                    <i class="bi bi-stopwatch me-2"></i>Manage Scoreboard
                                 </a>
                             </li>
                         </ul>
